After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747460 - Initial empathy accounts window is too wide
Initial empathy accounts window is too wide
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Accounts
3.12.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2015-04-07 15:13 UTC by Vadim Rutkovsky
Modified: 2015-04-28 14:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot (260.20 KB, image/png)
2015-04-07 15:13 UTC, Vadim Rutkovsky
  Details
Limit width of first run dialog (989 bytes, patch)
2015-04-22 00:44 UTC, Michael Catanzaro
committed Details | Review

Description Vadim Rutkovsky 2015-04-07 15:13:14 UTC
Created attachment 301079 [details]
Screenshot

Description of problem:
See attached screenshot

Version-Release number of selected component (if applicable):
empathy-3.12.8-1.fc23.x86_64

How reproducible:
Always

Steps to Reproduce:
1. Cleanup all accounts
2. Start empathy

Actual results:
Initial window is too wide

Expected results:
Text is wrapped properly and the window doesn't take too much space
Comment 1 Michael Catanzaro 2015-04-22 00:44:17 UTC
Created attachment 302109 [details] [review]
Limit width of first run dialog

I'm not quite sure how to get this dialog to appear, so please test!
Comment 2 Debarshi Ray 2015-04-28 13:46:55 UTC
Review of attachment 302109 [details] [review]:

I am not a empathy reviewer, but this fixes the issue for me.
Comment 3 Debarshi Ray 2015-04-28 13:47:24 UTC
(In reply to Michael Catanzaro from comment #1)
> Created attachment 302109 [details] [review] [review]
> Limit width of first run dialog
> 
> I'm not quite sure how to get this dialog to appear, so please test!

Run empathy-accounts without having any account configured.
Comment 4 Guillaume Desmottes 2015-04-28 13:51:23 UTC
Review of attachment 302109 [details] [review]:

++
Comment 5 Debarshi Ray 2015-04-28 14:04:50 UTC
Thanks Cassidy and Michael.