Limit width of first run dialog

https://bugzilla.gnome.org/show_bug.cgi?id=747460